<resources>
    <string name="app_name">nucorAlb</string>
    <string name="institute_string"><b>Institute: </b></string>
    <string name="type_corruption_string"><b>Type of Corruption: </b></string>
    <string name="date_string"><b>Date of Report:</b></string>
    <string name="title_activity_wiki">WikiActivity</string>
    <string name="title_activity_forum">ForumActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="newStory">New story</string>
    <string name="newWikiArticle">New wiki article</string>
    <string name="newForumPost">Popular forum post</string>
    <string name="searchedInst">Frequently searched institution</string>
    <string name="title_activity_test_floating_and_bar">TestFloatingAndBar</string>

    <string name="facebook_app_id">1765252140373070</string>
    <string name="addInstitution">Add Institution</string>
    <string name="addWiki">Add Wiki</string>
    <string name="addStory">Share Your Corruption Story</string>
    <string name="shareInstitution">Share Institution</string>
    <string name="favorite">Follow/unfollow</string>
    <string name="takeSurvey">Take A Survey</string>
    <string name="shareApp">Share App</string>
    <string name="searchApp">Search App</string>
    <string name="shareStory">Share Story</string>
    <string name="shareWiki">Share Article</string>
    <string name="logout">Logout</string>
    <string name="username_preference">username</string>
    <string name="password_preference">password</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
