<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/searchAll"
        android:orderInCategory="100"
        android:title="@string/searchApp"
        android:icon="@drawable/ic_search_21dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/addStory"
        android:orderInCategory="100"
        android:title="@string/addStory"
        android:icon="@drawable/ic_add_white_18dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/shareApp"
        android:icon="@drawable/ic_share_white_18dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/addInstitution"
        android:orderInCategory="100"
        android:title="@string/addInstitution"
        app:showAsAction="never" />
    <item
        android:id="@+id/addWiki"
        android:orderInCategory="100"
        android:title="@string/addWiki"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>